--- a/kubeone.yaml
+++ b/kubeone.yaml
@@ -94,7 +94,7 @@ features:
   # Enable OpenID-Connect support in API server
   # More info: https://kubernetes.io/docs/reference/access-authn-authz/authentication/#openid-connect-tokens
   openidConnect:
-    enable: false
+    enable: true
     config:
       # The URL of the OpenID issuer, only HTTPS scheme will be accepted. If
       # set, it will be used to verify the OIDC JSON Web Token (JWT).
