--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -12,9 +12,8 @@ NUMBER_OF_NODES=6
 NODE_IP_RANGE="192.168.56." # keep the last number empty
 
 Vagrant.configure("2") do |config|
-
     (1..NUMBER_OF_NODES).each do |i|
-        config.vm.define "node-#{i}" do |node|
+        config.vm.define "k8s-node-#{i}" do |node|
             node.vm.box = BOX
             node.vm.box_version = BOX_VERSION
 
@@ -25,11 +24,9 @@ Vagrant.configure("2") do |config|
             end
 
             node.vm.network "private_network", ip: NODE_IP_RANGE+"#{i + 10}"
-            node.vm.hostname = "node-#{i}"
+            node.vm.hostname = "k8s-node-#{i}"
             
             node.vm.provision "main", type: "shell", args: [USER_NAME, PASSWORD, KEYMAP, SSH_KEY], path: "provisioner/main.sh"
         end
     end
-    
 end
-  
